# cv-generator

./: .gitignore  Makefile  README.md  cvgen.py  pyproject.toml
css/: cv.css  cv.sass
cvgen/: builder.py  environment.py  loader.py  models.py
cvgen/samples/: config.toml
template/: base.html
