[tool.poetry]
name = "cv-generator"
version = "0.1.0"
description = "A simple CV generator written in Python"
authors = ["staticf0x <44530786+staticf0x@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cvgen"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
pydantic = {extras = ["email"], version = "^1.10.4"}


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
devtools = {extras = ["pygments"], version = "^0.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
